--- a/assets/css/src/components/_tags.scss
+++ b/assets/css/src/components/_tags.scss
@@ -14,14 +14,14 @@
   border-radius: 3px;
   color: $color-tertiary;
   display: inline-block;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: normal;
   line-height: 14px;
-  padding: 1px 4px;
+  padding: 2px 4px;
 }
 
 .mailpoet-tag-large {
-  font-size: 13px;
+  font-size: 14px;
   min-width: 50px;
   padding: 4px 9px;
   text-align: center;
